--- a/mac/.aerospace.toml
+++ b/mac/.aerospace.toml
@@ -137,9 +137,11 @@ on-mode-changed = []
     ctrl-f5 = 'workspace 5'
 
     # See: https://nikitabobko.github.io/AeroSpace/commands#move-node-to-workspace
-    # TODO: Learn later
-    # alt-shift-1 = 'move-node-to-workspace 1'
-    # alt-shift-2 = 'move-node-to-workspace 2'
+    alt-shift-1 = 'move-node-to-workspace 1'
+    alt-shift-2 = 'move-node-to-workspace 2'
+    alt-shift-3 = 'move-node-to-workspace 3'
+    alt-shift-4 = 'move-node-to-workspace 4'
+    alt-shift-5 = 'move-node-to-workspace 5'
 
     # See: https://nikitabobko.github.io/AeroSpace/commands#workspace-back-and-forth
     alt-tab = 'workspace-back-and-forth'
